fix overflow scroller

--- a/src/components/Modal/modal.less
+++ b/src/components/Modal/modal.less
@@ -60,6 +60,7 @@
     margin: auto;
     padding: 15px;
     overflow: auto;
+    border-radius: 4px;
 }
 
 .gg-modal-close-button {
