--- a/src/components/Scroller/scroller.less
+++ b/src/components/Scroller/scroller.less
@@ -1,7 +1,8 @@
 .gg-scroller {
-    overflow: auto;
+    overflow-x: auto;
     scrollbar-width: none;
     user-select: none;
+    overflow-y: hidden;
 
     &::-webkit-scrollbar {
         display: none;
